dist_man1_MANS=

if BUILD_ILANCOIND
  dist_man1_MANS+=ilancoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=ilancoin-qt.1
endif

if BUILD_ILANCOIN_CLI
  dist_man1_MANS+=ilancoin-cli.1
endif

if BUILD_ILANCOIN_TX
  dist_man1_MANS+=ilancoin-tx.1
endif

if ENABLE_WALLET
if BUILD_ILANCOIN_WALLET
  dist_man1_MANS+=ilancoin-wallet.1
endif
endif
